fix media query for skill icon alignment for small screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -230,7 +230,7 @@ hr.custom_hr {
     height: 55px;
 }
 
-@media (max-width: 991px) {
+@media (max-width: 767px) {
     .card_icon {
       text-align: center;
     }
